# ApkInfoParse

./: README.md  package-lock.json  package.json
src/: App.vue  apk_info.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: android_xml.rs  apk_info.rs  manifest_parser.rs
src/components/: ApkInfoCp.vue  CustomAlert.vue
